# programing-language

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Matrix.cpp  Matrix.h  PL.sublime-project  PL.sublime-workspace  README.md  Stack.cpp  Stack.h  Utility.h  interpreter  interpreter.cc  main.cpp  notes.ipynb  programing-language.cbp  stdlib.mat  stdlib.script  test
.github/workflows/: cmake.yml
html/: _base_8h.html  _base_8h__dep__incl.map  _base_8h__dep__incl.md5  _base_8h__incl.map  _base_8h__incl.md5  _base_8h_source.html  _conditional_8h.html  _conditional_8h__dep__incl.map  _conditional_8h__dep__incl.md5  _conditional_8h__incl.map  _conditional_8h__incl.md5  _conditional_8h_source.html  _create_variable_8h.html  _create_variable_8h__dep__incl.map  _create_variable_8h__dep__incl.md5  _create_variable_8h__incl.map  _create_variable_8h__incl.md5  _create_variable_8h_source.html  _error_8h.html  _error_8h__dep__incl.map  _error_8h__dep__incl.md5  _error_8h_source.html  _function_8h.html  _function_8h.js  _function_8h__dep__incl.map  _function_8h__dep__incl.md5  _function_8h__incl.map  _function_8h__incl.md5  _function_8h_source.html  _function_call_8h.html  _function_call_8h__dep__incl.map  _function_call_8h__dep__incl.md5  _function_call_8h__incl.map  _function_call_8h__incl.md5  _function_call_8h_source.html  _matrix_8cpp.html  _matrix_8cpp__incl.map  _matrix_8cpp__incl.md5  _matrix_8h.html  _matrix_8h__dep__incl.map  (+258 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  (+30 more)
language/: BindDef.cc  BindDef.h  BindingUsage.cc  BindingUsage.h  Block.cc  Block.h  CMakeLists.txt  Conditional.cc  Conditional.h  ErrorStatment.cc  ErrorStatment.h  Expr.cc  Expr.h  FuncCall.cc  FuncCall.h  FuncDef.cc  FuncDef.h  IStatment.cc  IStatment.h  IValue.h  Loop.cc  Loop.h  Matrix.cc  Matrix.h  Null.cc  Null.h  Stack.h  Statment.h  env.cc  env.h  parser.cc  parser.h  utils.h
language/test/: TestBind.cc  TestBlock.cc  TestExpr.cc  TestParser.cc
latex/: _base_8h.tex  _base_8h__dep__incl.md5  _base_8h__incl.md5  _conditional_8h.tex  _conditional_8h__dep__incl.md5  _conditional_8h__incl.md5  _create_variable_8h.tex  _create_variable_8h__dep__incl.md5  _create_variable_8h__incl.md5  _error_8h.tex  _error_8h__dep__incl.md5  _function_8h.tex  _function_8h__dep__incl.md5  _function_8h__incl.md5  _function_call_8h.tex  _function_call_8h__dep__incl.md5  _function_call_8h__incl.md5  _matrix_8cpp.tex  _matrix_8cpp__incl.md5  _matrix_8h.tex  _matrix_8h__dep__incl.md5  _matrix_8h__incl.md5  _parser_8h.tex  _parser_8h__dep__incl.md5  _parser_8h__incl.md5  _scope_8h.tex  _scope_8h__dep__incl.md5  _scope_8h__incl.md5  _state_8h.tex  _state_8h__dep__incl.md5  _state_8h__incl.md5  _token_8h.tex  _token_8h__dep__incl.md5  _utility_8h.tex  _utility_8h__dep__incl.md5  _variable_8h.tex  _variable_8h__dep__incl.md5  _variable_8h__incl.md5  _variable_assigment_8h.tex  _variable_assigment_8h__dep__incl.md5  (+92 more)
lisp/: BindDef.cc  BindDef.h  BindingUsage.cc  BindingUsage.h  Block.cc  Block.h  CMakeLists.txt  Expr.cc  Expr.h  Null.h  Stack.h  Statment.cc  Value.h  env.cc  env.h  lisp.cc  lisp.h  parser.cc  parser.h  utils.h
lisp/test/: TestBind.cc  TestBlock.cc  TestExpr.cc  TestParser.cc
lisp/tokens/: Error.h  Function.h  Main.cc  Main.h  Scope.cc  Scope.h  Token.h  Variable.cc  Variable.h
lisp/utils/: parsing.h
state-machine/: Parser.h  State.h
state-machine/states/: Base.h  Conditional.h  CreateVariable.h  Error.h  FunctionCall.h  ParseMatrix.cc  ParseMatrix.h  VariableAssigment.h
tokens/: Function.h  Scope.h  Token.h  Variable.h
